--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Elite Dangerous Journey</title>
+<title>Onward Homes</title>
 <link rel="shortcut icon" href="">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://storage.cloud.google.com/always-onward-static/base.css">
 <style>
 .bgimg-1 {
-  background-image: url('https://lh3.googleusercontent.com/CIW9yJiQo6bEy-c82RDFveh4zyiH0WQmBhr2PCUZqPDI6AIX1llyaRHE9861_nSesJz8yN94O9zDoXmEjFLj-7KyxdNxrmBN0pScjxwmnFa64iJpnS8LvmrI2g_F5z6iebnpIKgAKA=w2400');
+  background-image: url('https://lh3.googleusercontent.com/FVm8Abh7fpjxTBZ1sY1aNxWbcQ6g6Gpjqm2sSX8Cx15-0T0dtc6q9AhCfA6shr4piXwgqrjw97bD8nTdaanw2knt6Of2txOFY8hvEDs8N0y27bPWrBgKvB_la7bfLhE7mhQGTfPsuA=w2400');
   min-height: 100%;
   background-size: cover;
   background-position: 50% 50%;
@@ -58,14 +58,12 @@ input,
 
 <div class="split right">
   <div class="centered">
-    <span class="lg-view"><h1>Elite Dangerous: My Journey </h1></span>
-    <span class="sm-view"><h1>Elite Dangerous</h1><h3>My Journey</h3></span>
+    <span class="lg-view"><h1>Onward Homes </h1></span>
+    <span class="sm-view"><h1>Onward Homes </h1></span>
     
-      <h3>Learning nodeJs by using my favorite game</h3>
-      <p><a class="tjw-button button-color" href="/ranks">Ranking up</a><br>
-				<a class="tjw-button button-color" href="/engineers">Engineers</a><br>
-				<a class="tjw-button button-color" href="/ships">Ships</a>
-        <a class="tjw-button button-color" href="https://eddb.io/trade/loops">Trading</a>
+      <h3>Tools to help agents and buyers buy houses</h3>
+      <p><a class="tjw-button button-color" href="/">Sign-in</a><br>
+				<a class="tjw-button button-color" href="/address">Find Comps for a property</a><br>
       </p>
   </div>
 </div>
