--- a/views/address.hbs
+++ b/views/address.hbs
@@ -1,13 +1,5 @@
 <!-- https://ctrlq.org/google/photos/?_ga=2.230481756.1332002786.1569075499-1191758933.1567786514 -->
-<!DOCTYPE html>
-<html>
-<head>
-<title>Onward Homes</title>
-<link rel="shortcut icon" href="">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://storage.cloud.google.com/always-onward-static/base.css">
-
+{{{errors}}}
 <form action="/address" method="post">
     <label for="address_name">Enter address for comparables: </label>
     <input id="address_name" type="text" name="address_field" value="">
