--- a/views/address.hbs
+++ b/views/address.hbs
@@ -1,7 +1,12 @@
 <!-- https://ctrlq.org/google/photos/?_ga=2.230481756.1332002786.1569075499-1191758933.1567786514 -->
-{{{errors}}}
-<form action="/address" method="post">
-    <label for="address_name">Enter address for comparables: </label>
-    <input id="address_name" type="text" name="address_field" value="">
-    <input type="submit" value="OK">
+
+{{# if errors }}
+  {{# each errors }}
+    <p>{{ this.msg }}</p>
+  {{/each}}
+{{/if}}
+<form action="/comps/address" method="post">
+    <label>Enter address for comparables: </label>
+    <input type="text" name="address_field" value="" />
+    <input type="submit" value="OK" />
 </form>
