--- a/views/index.hbs
+++ b/views/index.hbs
@@ -63,7 +63,7 @@ input,
     
       <h3>Tools to help agents and buyers buy houses</h3>
       <p><a class="tjw-button button-color" href="/">Sign-in</a><br>
-				<a class="tjw-button button-color" href="/address">Find Comps for a property</a><br>
+				<a class="tjw-button button-color" href="/comps/address">Find Comps for a property</a><br>
       </p>
   </div>
 </div>
