--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Elite Homes</title>
   <link rel="stylesheet" href="https://storage.cloud.google.com/always-onward-static/base.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 {{{body}}}
