--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Onward Homes</title>
+<title>Rental Manager</title>
 <link rel="shortcut icon" href="">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,12 +58,11 @@ input,
 
 <div class="split right">
   <div class="centered">
-    <span class="lg-view"><h1>Onward Homes </h1></span>
-    <span class="sm-view"><h1>Onward Homes </h1></span>
-    
-      <h3>Tools to help agents and buyers buy houses</h3>
-      <p><a class="tjw-button button-color" href="/">Sign-in</a><br>
-				<a class="tjw-button button-color" href="/comps/address">Find Comps for a property</a><br>
+    <span class="lg-view"><h1>Rental Manager </h1></span>
+    <span class="sm-view"><h1>Rental Manager </h1></span>
+
+      <h3>A workflow manager for managing your short-term rental. Sign-in to get started.</h3>
+      <p><a class="tjw-button button-color" href="https://auth.always-onward.com/login?client_id=6avu948ge5ufgq6n4mkk1bg003&response_type=token&scope=aws.cognito.signin.user.admin+email+openid+phone+profile&redirect_uri=https://rental-manager.always-onward.com/">Sign-in</a><br>
       </p>
   </div>
 </div>
