--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,56 +1,69 @@
-<!-- https://ctrlq.org/google/photos/?_ga=2.230481756.1332002786.1569075499-1191758933.1567786514 -->
 <!DOCTYPE html>
 <html>
 <head>
 <title>Rental Manager</title>
-<link rel="shortcut icon" href="">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://storage.cloud.google.com/always-onward-static/base.css">
+<link rel="stylesheet" href="https://static.always-onward.com/base.css">
+<script>
+  function preparePage(){
+    const id_token = getIDToken('rental-auth-token')
+    if (id_token == null){
+      $("#signout-button, #home-button").hide()
+      $("#signin-button").show()
+    } else {
+      $("#signout-button, #home-button").show()
+      $("#signin-button").hide()
+    }
+    $("#signout-button").click(function () {
+      localStorage.removeItem('rental-auth-token')
+    })
+  }
+
+</script>
 <style>
-.bgimg-1 {
-  background-image: url('https://lh3.googleusercontent.com/FVm8Abh7fpjxTBZ1sY1aNxWbcQ6g6Gpjqm2sSX8Cx15-0T0dtc6q9AhCfA6shr4piXwgqrjw97bD8nTdaanw2knt6Of2txOFY8hvEDs8N0y27bPWrBgKvB_la7bfLhE7mhQGTfPsuA=w2400');
-  min-height: 100%;
-  background-size: cover;
-  background-position: 50% 50%;
-}
+  .bgimg-1 {
+    background-image: url('http://static.always-onward.com/rental-manager/home.jpg');
+    min-height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
 
-.left {left:0;background-color: #111;}
-.right {right:0;background-color: #c2c2a3}
-.lg-view{display:inline-block}
-.sm-view{display:none}
-.button-color{color:#fff;background-color:#7a7a52}
-.drk-button-color{color:#fff;background-color:#4d4d33}
+  .left {left:0;background-color: #111;}
+  .right {right:0;background-color: #c2c2a3}
+  .lg-view{display:inline-block}
+  .sm-view{display:none}
+  .button-color{color:#fff;background-color:#7a7a52}
+  .drk-button-color{color:#fff;background-color:#4d4d33}
 
-@media only screen and (max-width: 860px) {
-  .left {width:100%}
-  .right {width:90%; height:85%; right: 5%; top: 15% }
-  .lg-view{display:none}
-  .sm-view{display:inline-block}
-}
-html,body{font-family:"Lucida Bright", Georgia, serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}
-h1 { font-family: "Lucida Bright", Georgia, serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; }
-h3 { font-family: "Lucida Bright", Georgia, serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; }
-h4 {width: 100%;text-align: center;border-bottom: 1px solid #000;line-height: 0.1em;margin: 10px 0 20px}
-h4 span {background:#c2c2a3;padding:0 10px}
-p { font-family: "Lucida Bright", Georgia, serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; }
-blockquote { font-family: "Lucida Bright", Georgia, serif; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; }
-pre { font-family: "Lucida Bright", Georgia, serif; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
-hr{border:0;border-top:1px solid #eee;margin:20px 0}
+  @media only screen and (max-width: 860px) {
+    .left {width:100%}
+    .right {width:90%; height:85%; right: 5%; top: 15% }
+    .lg-view{display:none}
+    .sm-view{display:inline-block}
+  }
+  html,body{font-family:"Lucida Bright", Georgia, serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}
+  h1 { font-family: "Lucida Bright", Georgia, serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; }
+  h3 { font-family: "Lucida Bright", Georgia, serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; }
+  h4 {width: 100%;text-align: center;border-bottom: 1px solid #000;line-height: 0.1em;margin: 10px 0 20px}
+  h4 span {background:#c2c2a3;padding:0 10px}
+  p { font-family: "Lucida Bright", Georgia, serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; }
+  blockquote { font-family: "Lucida Bright", Georgia, serif; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; }
+  pre { font-family: "Lucida Bright", Georgia, serif; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
+  hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
-.google-button {height: 40px;border-width: 0;background: white;color: #737373;border-radius: 5px;white-space: nowrap;box-shadow: 1px 1px 0px 1px rgba(0,0,0,0.05);
-  transition-property: background-color, box-shadow;transition-duration: 150ms;transition-timing-function: ease-in-out;padding: 0;
-  &:hover {box-shadow: 1px 4px 5px 1px rgba(0,0,0,0.1);}
-  &:active {background-color: #e5e5e5; box-shadow: none;transition-duration: 10ms;}
-}
-.google-button__icon {display: inline-block; vertical-align: middle; margin: 8px 0 8px 8px; width: 18px; height: 18px; box-sizing: border-box;}
-.google-button__text {display: inline-block; vertical-align: middle; padding: 0 24px; font-size: 14px; font-weight: bold; font-family: 'Roboto',arial,sans-serif}
-input,
-.btn {width:100%;padding:8px 16px;border:none;border-radius: 4px;margin: 5px 0;display:inline-block;line-height: 20px;text-decoration:none}
-
+  .google-button {height: 40px;border-width: 0;background: white;color: #737373;border-radius: 5px;white-space: nowrap;box-shadow: 1px 1px 0px 1px rgba(0,0,0,0.05);
+    transition-property: background-color, box-shadow;transition-duration: 150ms;transition-timing-function: ease-in-out;padding: 0;
+    &:hover {box-shadow: 1px 4px 5px 1px rgba(0,0,0,0.1);}
+    &:active {background-color: #e5e5e5; box-shadow: none;transition-duration: 10ms;}
+  }
+  .google-button__icon {display: inline-block; vertical-align: middle; margin: 8px 0 8px 8px; width: 18px; height: 18px; box-sizing: border-box;}
+  .google-button__text {display: inline-block; vertical-align: middle; padding: 0 24px; font-size: 14px; font-weight: bold; font-family: 'Roboto',arial,sans-serif}
+  input,
+  .btn {width:100%;padding:8px 16px;border:none;border-radius: 4px;margin: 5px 0;display:inline-block;line-height: 20px;text-decoration:none}
 </style>
 </head>
-<body>
+<body onload="preparePage()">
 <div class="split left">
   <div class="bgimg-1">
   </div>
@@ -62,9 +75,13 @@ input,
     <span class="sm-view"><h1>Rental Manager </h1></span>
 
       <h3>A workflow manager for managing your short-term rental. Sign-in to get started.</h3>
-      <p><a class="tjw-button button-color" href="https://auth.always-onward.com/login?client_id=6avu948ge5ufgq6n4mkk1bg003&response_type=token&scope=aws.cognito.signin.user.admin+email+openid+phone+profile&redirect_uri=https://rental-manager.always-onward.com/">Sign-in</a><br>
+
+      <p><a id="signin-button" class="tjw-button button-color" href="https://auth.always-onward.com/login?client_id=6avu948ge5ufgq6n4mkk1bg003&response_type=token&scope=aws.cognito.signin.user.admin+email+openid+phone+profile&redirect_uri={{host}}/">Sign-in</a><br>
+      <p><a id="signout-button" class="tjw-button button-color" href="https://auth.always-onward.com/logout?client_id=6avu948ge5ufgq6n4mkk1bg003&logout_uri={{host}}/">Sign-out</a></p>
+      <p><a id="home-button" class="tjw-button button-color" onclick="redirect('/home','rental-auth-token')">Home</a></p>
       </p>
   </div>
 </div>
+
 </body>
 </html>
