--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="https://storage.cloud.google.com/always-onward-static/base.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="/public/app.js"></script>
+  <link rel="icon" type="image/png" href="https://static.always-onward.com/rental-manager/favicon.ico">
+  <link rel="shortcut icon" href="https://static.always-onward.com/rental-manager/favicon.ico">
 </head>
 <body>
 {{{body}}}
