--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,21 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://static.always-onward.com/base.css">
-<script>
-  function preparePage(){
-    const id_token = getIDToken('rental-auth-token')
-    if (id_token == null){
-      $("#signout-button, #home-button").hide()
-      $("#signin-button").show()
-    } else {
-      window.location.href = "/home";
-    }
-    $("#signout-button").click(function () {
-      localStorage.removeItem('rental-auth-token')
-    })
-  }
 
-</script>
 <style>
   .bgimg-1 {
     background-image: url('http://static.always-onward.com/rental-manager/home.jpg');
@@ -62,7 +48,7 @@
   .btn {width:100%;padding:8px 16px;border:none;border-radius: 4px;margin: 5px 0;display:inline-block;line-height: 20px;text-decoration:none}
 </style>
 </head>
-<body onload="preparePage()">
+<body>
 <div class="split left">
   <div class="bgimg-1">
   </div>
